<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pset1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.floris.floris_pset1.pset1">

    <RelativeLayout
        android:id="@+id/Layout1"
        android:layout_width="325dp"
        android:layout_height="257dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/desc"
            app:srcCompat="@drawable/body" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/desc"
            app:srcCompat="@drawable/arms" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="99dp"
            android:contentDescription="@string/desc"
            app:srcCompat="@drawable/eyes" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="75dp"
            android:contentDescription="@string/desc"
            app:srcCompat="@drawable/nose" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/desc"
            app:srcCompat="@drawable/mouth" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="60dp"
            android:contentDescription="@string/desc"
            app:srcCompat="@drawable/eyebrows" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView16"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/desc"
            app:srcCompat="@drawable/glasses" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView11"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="27dp"
            android:contentDescription="@string/desc"
            app:srcCompat="@drawable/hat" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/desc"
            app:srcCompat="@drawable/shoes" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="23dp"
            android:contentDescription="@string/desc"
            app:srcCompat="@drawable/ears" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView12"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/desc"
            app:srcCompat="@drawable/mustache" />

    </RelativeLayout>

    <TableLayout
        android:id="@+id/Layout2"
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:orientation="horizontal">

        <TableRow
            android:id="@+id/Row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <!--Android tells me I have some abundant views but they all turn
             out to be necessary-->
            
            <TableRow
                android:id="@+id/Row2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <!--Vertical linearlayout within a tablerow lets me make vertical rows-->

                <LinearLayout
                    android:id="@+id/Layout3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkBoxMouth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="onCheckBoxClick"
                        android:text="@string/mouth" />

                    <CheckBox
                        android:id="@+id/checkBoxEars"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="onCheckBoxClick"
                        android:text="@string/ears" />

                    <CheckBox
                        android:id="@+id/CheckBoxMustache"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="onCheckBoxClick"
                        android:text="@string/mustache" />

                    <CheckBox
                        android:id="@+id/checkBoxGlasses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="onCheckBoxClick"
                        android:text="@string/glasses" />

                    <CheckBox
                        android:id="@+id/checkBoxArms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="onCheckBoxClick"
                        android:text="@string/arms" />
                </LinearLayout>

            </TableRow>

            <LinearLayout
                android:id="@+id/Layout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBoxShoes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onCheckBoxClick"
                    android:text="@string/shoes" />

                <CheckBox
                    android:id="@+id/checkBoxNose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onCheckBoxClick"
                    android:text="@string/nose" />

                <CheckBox
                    android:id="@+id/checkBoxEyebrows"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onCheckBoxClick"
                    android:text="@string/eyebrows" />

                <CheckBox
                    android:id="@+id/checkBoxEyes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onCheckBoxClick"
                    android:text="@string/eyes" />

                <CheckBox
                    android:id="@+id/checkBoxHat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onCheckBoxClick"
                    android:text="@string/hat" />
            </LinearLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>


